--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">Football Scores</string>
+    <string name="authority" translatable="false">barqsoft.footballscores</string>
+    <string name="account_type">example.com</string>
 
     <!--MainActivity-->
     <string name="yesterday">Yesterday</string>
@@ -50,6 +52,8 @@
 
         During the off season, fake data will be added to the app.
     </string>
-    <string name="title_activity_about"></string>
 
-</resources>
+    <!--Preferences-->
+    <string name="pref_last_update" translatable="false">Last update</string>
+
+</resources>    
