fixed crest issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,7 +88,7 @@
     <string name="Carpi_FC">https://upload.wikimedia.org/wikipedia/uk/0/0b/Carpi_FC_1909_logo.png</string>
     <string name="VfL_Bochum">http://upload.wikimedia.org/wikipedia/de/4/43/Logo_VfL_Bochum.svg</string>
     <string name="Tottenham_Hotspur_FC">http://upload.wikimedia.org/wikipedia/de/b/b4/Tottenham_Hotspur.svg</string>
-    <string name="Bor._Mönchengladbach">https://upload.wikimedia.org/wikipedia/commons/8/81/Borussia_Mönchengladbach_logo.svg</string>
+    <string name="Bor_Mönchengladbach">https://upload.wikimedia.org/wikipedia/commons/8/81/Borussia_Mönchengladbach_logo.svg</string>
     <string name="Torino_FC">http://upload.wikimedia.org/wikipedia/de/2/2e/Torino_FC_Logo.svg</string>
     <string name="AS_Roma">http://upload.wikimedia.org/wikipedia/de/3/32/AS_Rom.svg</string>
     <string name="Leicester_City_FC">http://upload.wikimedia.org/wikipedia/en/6/63/Leicester02.png</string>
